--- a/first_project/src/App.css
+++ b/first_project/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+.conatiner{
+  width: 80%;
+  /* margin: 20px; */
+  margin: auto;
+  margin-top: 30px;
+  border: 3px solid paleturquoise;
+  background-color: blanchedalmond;
+}
