--- a/simple-e-commerce/src/components/Shop/Shop.css
+++ b/simple-e-commerce/src/components/Shop/Shop.css
@@ -2,3 +2,12 @@
     display: grid;
     grid-template-columns: 4fr 1fr;
 }
+.products{
+    margin-top: 20px;
+}
+.product-container{
+    
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+}
