--- a/simple-e-commerce/src/components/Product/Product.css
+++ b/simple-e-commerce/src/components/Product/Product.css
@@ -3,6 +3,7 @@
     height: 510px;
     border: 1px solid rgb(207, 192, 192);
     border-radius: 8px;
+    position: relative;
 }
 
 .product img{
@@ -28,3 +29,19 @@
     line-height: 25px;
     margin-top: 7px;
 }
+
+/* for button 
+ */
+
+ .btnCart{
+    width: 100%;
+    background-color: #FFA0B3;
+    border: 0;
+    border-radius: 0 0 8px 8px;
+    position: absolute;
+    bottom: 0;
+
+ }
+ .btnCart:hover{
+    background-color: chocolate;
+ }
