event handler worked

--- a/simple-e-commerce/src/components/Shop/Shop.css
+++ b/simple-e-commerce/src/components/Shop/Shop.css
@@ -1,6 +1,7 @@
 .shop-container{
     display: grid;
     grid-template-columns: 4fr 1fr;
+    
 }
 .products{
     margin-top: 20px;
@@ -10,4 +11,6 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
+    margin: 80px 50px;
+  
 }
