--- a/simple-e-commerce/src/components/Product/Product.css
+++ b/simple-e-commerce/src/components/Product/Product.css
@@ -1,9 +1,10 @@
 .product{
     width: 300px;
-    height: 510px;
+    height: 490px;
     border: 1px solid rgb(207, 192, 192);
     border-radius: 8px;
     position: relative;
+   /* margin-left: 50px; */
 }
 
 .product img{
@@ -18,7 +19,8 @@
    margin: 0px 14px;
 }
 .product-info p{
-    margin: 0;
+    margin-bottom: 0;
+    margin-top: 5px;
 
 }
 .product-name{
