--- a/simple-e-commerce/src/components/Product/Product.css
+++ b/simple-e-commerce/src/components/Product/Product.css
@@ -1,6 +1,6 @@
 .product{
     width: 300px;
-    height: 490px;
+    height: 500px;
     border: 1px solid rgb(207, 192, 192);
     border-radius: 8px;
     position: relative;
@@ -42,7 +42,15 @@
     border-radius: 0 0 8px 8px;
     position: absolute;
     bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
+ }
+ .btn-text{
+    margin-right: 5px;
+    font-size: 16px;
+    font-weight: 600;
  }
  .btnCart:hover{
     background-color: chocolate;
